[gd_scene load_steps=7 format=3 uid="uid://b3ttyn7bfc2v0"]

[ext_resource type="Script" uid="uid://84gckqfa1ts8" path="res://addons/sprouty_dialogs/editor/scripts/about_panel.gd" id="1_mxuji"]
[ext_resource type="Texture2D" uid="uid://cka2spagpv2d7" path="res://addons/sprouty_dialogs/editor/icons/plugin_icon.svg" id="1_owu31"]
[ext_resource type="StyleBox" uid="uid://dfa36wxs72oc0" path="res://addons/sprouty_dialogs/editor/theme/empty_panel.tres" id="2_mxuji"]
[ext_resource type="Texture2D" uid="uid://dmacl3fimk34t" path="res://addons/sprouty_dialogs/editor/icons/text_editor/text-align-justify.svg" id="3_e464s"]
[ext_resource type="Texture2D" uid="uid://d1ktado0bvpv7" path="res://addons/sprouty_dialogs/editor/icons/github.svg" id="4_dhkc0"]
[ext_resource type="Texture2D" uid="uid://cl8faicjvrgi2" path="res://addons/sprouty_dialogs/editor/icons/heart.svg" id="5_4kbvv"]

[node name="AboutPanel" type="PopupPanel"]
disable_3d = true
oversampling_override = 1.0
title = "About - Sprouty Dialogs"
initial_position = 4
size = Vector2i(296, 231)
visible = true
borderless = false
script = ExtResource("1_mxuji")

[node name="Container" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="TextureRect" parent="Container"]
layout_mode = 2
texture = ExtResource("1_owu31")
stretch_mode = 3

[node name="VersionLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Version 1.0.0"
horizontal_alignment = 1

[node name="VersionStatusLabel" type="RichTextLabel" parent="Container"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_mxuji")
bbcode_enabled = true
text = "[center](Up to Date!)"
fit_content = true

[node name="UpdateButton" type="Button" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
text = "Update to last version"

[node name="HSeparator" type="HSeparator" parent="Container"]
layout_mode = 2

[node name="Links" type="HBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DocsButton" type="Button" parent="Container/Links"]
layout_mode = 2
size_flags_horizontal = 4
text = "Docs"
icon = ExtResource("3_e464s")

[node name="GithubButton" type="Button" parent="Container/Links"]
layout_mode = 2
size_flags_horizontal = 4
text = "Github"
icon = ExtResource("4_dhkc0")

[node name="DonateButton" type="Button" parent="Container/Links"]
layout_mode = 2
size_flags_horizontal = 4
text = "Donate"
icon = ExtResource("5_4kbvv")

[node name="Credits" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="CreditsLabel" type="RichTextLabel" parent="Container/Credits"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_mxuji")
bbcode_enabled = true
text = "[right] Sprouty Labs
Made by [url=https://github.com/Kazymila]Kazy[/url]"
fit_content = true
